--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,10 +8,20 @@
 </head>
 <body>
   <!-- header用 -->
-  <div class="header">
-    <div class="header-top"></div>
-    <div class="header-bottom"></div>
-  </div>
+<header>
+  <h1 class="headline">
+    <a href="index.html"> CARAVAN</a>
+  </h1>
+</header>
+<nav>
+  <ul class="nav-list">
+    <li class="nav-list-item">
+      <a href="index.html"> Home</a>
+    </li>
+    <li class="nav-list-item"> About</li>
+    <li class="nav-list-item"> Topic</li>
+  </ul>
+</nav>
   <div class="main-visual">
     <div class="main-visual-content"></div>
   </div>
@@ -20,6 +29,8 @@
     <div class="blog"></div>
     <div class="sidebar"></div>
   </div>
-  <div class="footer"></div>
+  <footer>
+    <p class="footer-text"> ©︎ All rights recerved by Infratop.Inc.</p>
+  </footer>
 </body>
 </html>
